--- a/ENG101 Open Access 2/handbook.html
+++ b/ENG101 Open Access 2/handbook.html
@@ -141,11 +141,7 @@
 	way around, or is this structure easier for your audience to read? Your answers will always be subjective and contextual, but these are 
 	the types of questions that will help you take control over your writing.</li>
 							</ul>
-							<h3>Works Cited</h3>
-
-							<p>Duncan, Mike. “Whatever Happened to the Paragraph?” <i>College English</i>, vol. 69, no. 5, 2007, pp. 470-495.</p>
-
-<p>McGee, Iain. “Reconsidering Paragraphing Pedagogy: A Descriptivist Perspective.” <i>English in Education</i>, vol. 50, no. 3, 2016, pp. 233-254.</p>
+							
 
 <h3 id="voice">Voice</h3>
 <p>Voice </p>
@@ -199,7 +195,11 @@
 							an existing understanding of a body of knowledge and reading and 2) to avoid having to cite and quote multiple sources that are not necessarily central to the argument but
 							are important to contextualize the writing and establish the purpose.</p>
 							
+<h3>Works Cited on This Page</h3>
 
+<p>Duncan, Mike. “Whatever Happened to the Paragraph?” <i>College English</i>, vol. 69, no. 5, 2007, pp. 470-495.</p>
+
+<p>McGee, Iain. “Reconsidering Paragraphing Pedagogy: A Descriptivist Perspective.” <i>English in Education</i>, vol. 50, no. 3, 2016, pp. 233-254.</p>
 
 </div>
 
