--- a/ENG101 Open Access 2/discoursecommunities.html
+++ b/ENG101 Open Access 2/discoursecommunities.html
@@ -110,35 +110,12 @@
 	a group of food truck owners who have never interacted with each other probably wouldn’t be a discourse community because they don’t 
 	possess mechanisms of intercommunication or share information and feedback with one another. Not every discourse community will meet 
 	all six characteristics, but most will. If a discourse community is missing too many of the characteristics, it might break up into 
-	multiple discourse communities or even cease to function.</p>
-
-<p>In summary, a discourse community is a group of people who communicate with one another to accomplish an agreed-upon goal. Discourse communities 
+	multiple discourse communities or even cease to function. In summary, a discourse community is a group of people who communicate with one another to accomplish an agreed-upon goal. Discourse communities 
 	share information and feedback, utilize genres, and interact using a specialized lexis, and they also have members with varying levels of 
 	knowledge and expertise.</p>
 
-<p>The WPA notes that:</p>
-<p>"Conventions are the formal rules and informal guidelines that define genres, and in so doing,
-	shape readers’ and writers’ perceptions of correctness or appropriateness. Most obviously, conventions govern
-	such things as mechanics, usage, spelling, and citation practices. But they also influence content, style,
-	organization, graphics, and document design. Conventions arise from a history of use and facilitate reading
-	by invoking common expectations between writers and readers. These expectations are not universal; they vary
-	by genre (conventions for lab notebooks and discussion-board exchanges differ), by discipline (conventional
-	moves in literature reviews in Psychology differ from those in English), and by occasion (meeting minutes and
-	executive summaries use different registers). A writer’s grasp of conventions in one context does not mean a firm grasp in another. Successful
-	writers understand, analyze, and negotiate conventions for purpose, audience, and genre, understanding
-	that genres evolve in response to changes in material conditions and composing technologies and attending
-	carefully to emergent conventions. By the end of first-year composition, students should develop knowledge
-	of linguistic structures, including grammar, punctuation, and spelling, through practice in composing and
-	revising. Understand why genre conventions for structure, paragraphing, tone, and mechanics vary. Gain experience
-	negotiating variations in genre conventions. Learn common formats and/or design features for different kinds of
-	texts. Explore the concepts of intellectual property (such as fair use and copyright) that motivate documentation
-	conventions. Practice applying citation conventions systematically in their own work.</p>
 
-<h3 id="What does writing and communication look like inside different communities?">What does writing and communication look like inside different communities?</h3>
-							<p>Start to identify discourse communities you currently belong to now and note some the six characteristics for each community. 
-								Explain how the community's characteristics work and function.</p>
-							
-							<h3>WHAT DO WRITING AND COMMUNICATION LOOK LIKE IN DIFFERENT COMMUNITIES? by Kimberly Smith</h3>
+<h3 id="What does writing and communication look like inside different communities?">What does writing and communication look like inside different communities? by Kimberly Smith</h3>
 
 <p>All discourse communities have different goals, values, and participating members, so how they communicate naturally differs. Different discourse 
 	communities might communicate formally or casually, quickly or slowly, using long documents or short ones, or using different types of 
@@ -324,6 +301,8 @@
 <li><a href="samples/discoursecommunityworkshop.pdf"target="_blank">Discourse Community Workshop Sample</a></li>
 <li><a href="samples/sampleinterviewtranscriptdiscoursecommunity.pdf"target="_blank">Sample Interview Transcript for a Discourse Community Analysis</a></li>
 							</ul>
+							<p>Start to identify discourse communities you currently belong to now and note some the six characteristics for each community. 
+								Explain how the community's characteristics work and function.</p>
 							
 							<h3>Read These Sources about Discourse Communities and Writing across Contexts.</h3>
 							<p><a href="https://writingspaces.org/?page_id=387"target="_blank">"Understanding Discourse Communities"</a> by Dan Melzer</p>
