--- a/ENG101 Open Access 2/multimodal.html
+++ b/ENG101 Open Access 2/multimodal.html
@@ -86,7 +86,7 @@ opportunity to forge their own experience with multimodal content</p>
   <li>To have an author of a multimodal form is to limit that form (146-47).</li>
 </ul>
 
-							<p>We can use these six <a href="#Semiotic Domain">semiotic </a> principles of multimodal texts as a method for questioning the
+							<p>We can use these six <a href="glossary.html#Semiotic Domain">semiotic </a> principles of multimodal texts as a method for questioning the
 	multidimensional spaces where authorless networks of semiotic materials must be disentangled.
 	This further exposes the original contexts for each and every type of text involved in formulating a
 	a new text. When approaching the reading of online
