--- a/ENG101 Open Access 2/research.html
+++ b/ENG101 Open Access 2/research.html
@@ -128,7 +128,9 @@
 							<p>The university spends hundreds of thousands of dollars a year on subscriptions to journals and databases of scholarship and academic resources.
 							Using the university database is an important media literacy that you need to learn and practice while completing your degree. The library
 							offers numerous resources on using the library and learning how to use the library that are extremely valuable. It is important to know 
-							what an archive is and how speical collections are organized. </p>				
+							what an archive is and how speical collections are organized. </p>	
+							
+							<p><iframe width="560" height="315" src="https://www.youtube.com/embed/abITzfMpAQM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
     <h3 id="#How do I set up interviews, surveys, and observations?">How Do I Organize Interviews, Surveys, and Observations?</h3>
 							<p>Conducting interviews, surveys, and observations requires attention to detail and planning. My father used to 
 							tell me that there are five P's in life, maybe you've heard a story like this from your father. Prior planning 
