--- a/ENG101 Open Access 2/portfolios.html
+++ b/ENG101 Open Access 2/portfolios.html
@@ -47,7 +47,10 @@
 					<li><a href="#Resources for making portfolios">How Do I Make a Portfolio?</a></li>
 				</ol>
 				<h3 id="What is a portfolio?">What Is a Portfolio?</h3>
-				<p>Portfolios give you and your writing more agency, and they encourage you to reflect on your learning and revise your writing and ideas. Portfolios demonstrate the relationship between your process and the product, and they allow you to examine and analyze your writing processes. Portfolios are built on the following core principles: </p>
+				<p>A portfolio is a collection of writing and assignments that promotes reflection on your learning, the writing process, and yourself as a writer. 
+					Portfolios give you and your writing more agency, encouraging you to revise your writing and ideas and to reflect on 
+					the relationship between your process and a product. Portfolios allow you to examine and analyze your writing 
+					processes from a broad purview, and they are built on the following core principles: </p>
 				<ul>
 					<li>Collecting </li>
 					<li>Selecting</li>
@@ -56,16 +59,29 @@
 					<li>Evaluating</li>
 				</ul>
 				<h3 id="Why are portfolios important?">Why Are Portfolios Important?</h3>
-				<p> Numerous educators and writing instructors have expressed a deep affinity for portfolios and portfolio pedagogy. In “The Use of ePortfolios in Evaluating the Curriculum and Student Learning,” Dale Fitch, Melissa Peet, Beth Glover Reed, and Richard Tolman explain that portfolios prompt students to reflect on their experiences and ideas and they allow students to clarify their goals (p. 39). In “Establishing Portfolio Evaluation,” Anne Gere, Hannah Dickinson, Melinda McBee Orzulak, and Stephanie Moody contend that portfolios give students the chance to reflect on their work and improve metacognitive abilities. In “Assessing, Grading, Testing, and Teaching Writing” Brian Huot argues that the process of compiling a portfolio allows students to practice assessing their own writing (p. 72). In “Portfolios in Progress: Reevaluating Assessment,” Sarah D. Spence and Billie Theriot note that portfolios enable students “to begin the process of self-determination, independence, and responsibility” (p. 34). In “Revising Our Practices: How Portfolios Help Teachers Learn,” Irwin Weiser describes how portfolios allow students to make more of their own decisions during the collection, reflection, selection, and revision processes (p. 296). Furthermore, because portfolios are evaluated as a complete collection, they can help identify and emphasize the importance of growth in learning and help students see “each piece as part of an ongoing process...contributing to the student’s development, not as a discrete marker of it” (Wesier, p. 296). In “Reflection, Revision, and Assessment in First-Year Composition ePortfolios” Christy Desmet, Deborah Church Miller, June Griffin, Ron Balthazor, and Robert E. Cummings contend that portfolios do four specific things:
+				<p> Numerous educators, writing instructors, and students have expressed a deep affinity for portfolios and portfolio pedagogy. 
+					In “The Use of ePortfolios in Evaluating the Curriculum and Student Learning,” Dale Fitch et al. 
+					explain that portfolios prompt students to reflect on their learning experiences and writing, allowing students 
+					to clarify their goals (p. 39). Portfolios give students 
+					the chance to reflect on their writing projects and processes and improve their metacognitive abilities. Brian Huot argues that compiling a portfolio allows students 
+					to practice assessing their own writing (p. 72). In “Portfolios in Progress: Reevaluating Assessment,” Sarah D. Spence and Billie 
+					Theriot assert that portfolios enable students “to begin the process of self-determination, independence, and responsibility” for their learning and
+					articulating that learning to their instructors (p. 34). 
+					In “Revising Our Practices: How Portfolios Help Teachers Learn,” Irwin Weiser describes how portfolios let students make more of 
+					their own decisions during the collection, reflection, selection, and revision processes for the portfolio (p. 296). Furthermore, because portfolios 
+					are evaluated as a complete collection, they can help students 
+					see “each piece as part of an ongoing process...contributing to the student’s development, not as a discrete marker of it” (Wesier, p. 296). 
+					Christy Desmet et al. state that portfolios do four specific things:
 					<ol>
 						<li>They "increase the writer’s agency in assessment,” since the writer persuades their audience through a reflective introduction (p. 19). </li>
-						<li>Second, portfolios encourage students to reflect on their revision process and use it to revise papers that may otherwise remain untouched (19). </li>
-						<li>Third, portfolios establish “an explicit relationship between process and product” (19). </li>
+						<li>Second, portfolios encourage students to reflect on their writing process and thinking and revise papers that may otherwise remain untouched (p. 19). </li>
+						<li>Third, portfolios establish “an explicit relationship between process and product” (p. 19). </li>
 						<li>Finally, portfolios help students learn about audience (p. 19).</li>
 					</ol>
-					<p>Take a few minutes to think about these four characteristics of a portfolio and discuss them with your instructor and classmates to learn more about the value of portfolios and how they are used in this course as a learning tool.</p>
+					<p>Take a few minutes to think about these characteristics of a portfolio and discuss them with your instructor and classmates to learn more about the value of portfolios and how they are used in this course as a learning tool.</p>
 					<h3 id="Resources for making portfolios">Resources for Making Portfolios</h3>
 					<p>By Rebekah Pusateri, MA CWU </p>
+				<p>This section provides several tools and resources for making portfolios</p>
 					<h4>Panopto</h4>
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/0pM6-9-wnTE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 					<ul>
@@ -93,7 +109,22 @@
 						<p>Students who are familiar with computer science, gaming, and programming may find this tool more interesting This platform will help you see nonlinear connections to various componenets of your portfolio. You do not need to know how to code to use Twine. Using the off-line version is best because when you use Twine online it is linked to your browser history, which means if you clear your browser history, the project will disappear. Twine is compatible with several different computers, phones, and tablets because of its universal CSS coding system. To share, a student needs to download the most recent version of their Twine project. The project downloads to an html file on their device. When clicked, the project opens up into its own web browser. Choosing a “story format” will determine what coding and changes a student will need to make to the project. To change the font, color, or any other stylistic element, a student has to use CSS. The possibilities are endless for customization. Students can add images and music that they created themselves or that they find on the internet. Depending on your level of programming and markup knowledge, Twine can require quite a bit of work to design a project.</p>
 		<h4>How to Make an ePortfolio Using Canvas</h4>
 					<iframe width="460" height="315" src="https://www.youtube.com/embed/QU3vO5cvq1A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
-		</div>
+		<h3> Works Cited on This Page</h3>
+          <ul>
+            
+            <li>Beaufort, Anne. (2007). <i>College writing and beyond: A new framework for university writing instruction</i>. Logan, UT: Utah State UP. Print. </li>
+            <li>Fitch, D., Peet, M., Reed, B. G., & Tolman, R. (2008). THE USE OF ePORTFOLIOS IN EVALUATING THE CURRICULUM AND STUDENT LEARNING. <i>Journal of Social Work Education</i>, 44(3), 37–54. http://www.jstor.org/stable/23044338</li>
+		  <li>Huot, Brian (2002). <i>(Re)Articulating Writing Assessment for Teaching and Learning</i> All USU Press Publications. 137.
+			  <a href="https://digitalcommons.usu.edu/usupress_pubs/137">Link</a></li>
+		  <li>Spence, S. D., Theriot, B., & Spence, S. L. (1999). Portfolios in Progress: Reevaluating Assessment. <i>Research and Teaching in Developmental Education</i>, 15(2), 27–36. http://www.jstor.org/stable/42802511
+Copy
+</li>
+            <li>Weiser, Irwin. (1997). Revising Our Practices: How Portfolios Help Teachers Learn in Yancey, Kathleen Blake, & Irwin, Weiser (Eds.) <i>Situating Portfolios: Four Perspectives</i>. Utah State University Press. <a href="https://digitalcommons.usu.edu/usupress_pubs/118">Link</a></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+			</div>
 			<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
