--- a/ENG101 Open Access 2/portfolios.html
+++ b/ENG101 Open Access 2/portfolios.html
@@ -79,8 +79,8 @@
 						<li>Finally, portfolios help students learn about audience (p. 19).</li>
 					</ol>
 					<p>Take a few minutes to think about these characteristics of a portfolio and discuss them with your instructor and classmates to learn more about the value of portfolios and how they are used in this course as a learning tool.</p>
-					<h3 id="Resources for making portfolios">Resources for Making Portfolios</h3>
-					<p>By Rebekah Pusateri, MA CWU </p>
+					<h3 id="Resources for making portfolios">Resources for Making Portfolios By Rebekah Pusateri, MA CWU </h3>
+					
 				<p>This section provides several tools and resources for making portfolios</p>
 					<h4>Panopto</h4>
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/0pM6-9-wnTE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -107,9 +107,10 @@
 						<h4>How to Make an ePortfolio Using Twine </h4>
 						<iframe width="460" height="315" src="https://www.youtube.com/embed/g7VYL8xqJnQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						<p>Students who are familiar with computer science, gaming, and programming may find this tool more interesting This platform will help you see nonlinear connections to various componenets of your portfolio. You do not need to know how to code to use Twine. Using the off-line version is best because when you use Twine online it is linked to your browser history, which means if you clear your browser history, the project will disappear. Twine is compatible with several different computers, phones, and tablets because of its universal CSS coding system. To share, a student needs to download the most recent version of their Twine project. The project downloads to an html file on their device. When clicked, the project opens up into its own web browser. Choosing a “story format” will determine what coding and changes a student will need to make to the project. To change the font, color, or any other stylistic element, a student has to use CSS. The possibilities are endless for customization. Students can add images and music that they created themselves or that they find on the internet. Depending on your level of programming and markup knowledge, Twine can require quite a bit of work to design a project.</p>
-		<h4>How to Make an ePortfolio Using Canvas</h4>
+		<h4>How to Make an ePortfolio Using Canvas By Dan Martin</h4>
 					<iframe width="460" height="315" src="https://www.youtube.com/embed/QU3vO5cvq1A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>	
-		<h3> Works Cited on This Page</h3>
+		
+				<h3> Works Cited on This Page</h3>
           <ul>
             
             <li>Beaufort, Anne. (2007). <i>College writing and beyond: A new framework for university writing instruction</i>. Logan, UT: Utah State UP. Print. </li>
