--- a/ENG101 Open Access 2/portfolios.html
+++ b/ENG101 Open Access 2/portfolios.html
@@ -47,16 +47,16 @@
 					<li><a href="#Resources for making portfolios">How Do I Make a Portfolio?</a></li>
 				</ol>
 				<h3 id="What is a portfolio?">What Is a Portfolio?</h3>
-				<p>A portfolio is a collection of writing and assignments that promotes reflection on your learning, the writing process, and yourself as a writer. 
+				<p>A portfolio is a collection of writing and assignments that promotes reflection on your learning and writing experiences. 
 					Portfolios give you and your writing more agency, encouraging you to revise your writing and ideas and to reflect on 
-					the relationship between your process and a product. Portfolios allow you to examine and analyze your writing 
-					processes from a broad purview, and they are built on the following core principles: </p>
+					the relationship between your process and a product. Portfolios give you a tool to examine and analyze your writing 
+					processes and thinking from a broader purview, and they are built on the following core principles: </p>
 				<ul>
-					<li>Collecting </li>
-					<li>Selecting</li>
-					<li>Reflecting</li>
-					<li>Revising</li>
-					<li>Evaluating</li>
+					<li>Collecting: Students collect drafts, notes, final papers and projects, reading responses and other written materials from the course that demonstrate steps and writing activity during your writing process.</li>
+					<li>Selecting: Students select assignments and examples of writing that demonstrate their learning and growth as a writer and how ideas and thinking develop from and with writing over the quarter.</li>
+					<li>Reflecting: Students reflect on their writing materials and processes and consider how writing works and functions and what their processes for writing tell them about themselves as a writer.</li>
+					<li>Revising: Students revise products in light of reflecting and extend their learning and thinking through revision.</li>
+					<li>Evaluating: Students evaluate their writing and thinking from a broader perspective and consider their growth as a writer and their learning in the course.</li>
 				</ul>
 				<h3 id="Why are portfolios important?">Why Are Portfolios Important?</h3>
 				<p> Numerous educators, writing instructors, and students have expressed a deep affinity for portfolios and portfolio pedagogy. 
