--- a/ENG101 Open Access 2/portfolios.html
+++ b/ENG101 Open Access 2/portfolios.html
@@ -79,7 +79,8 @@
 						<li>Finally, portfolios help students learn about audience (p. 19).</li>
 					</ol>
 					<p>Take a few minutes to think about these characteristics of a portfolio and discuss them with your instructor and classmates to learn more about the value of portfolios and how they are used in this course as a learning tool.</p>
-					<h3 id="Resources for making portfolios">Resources for Making Portfolios By Rebekah Pusateri, MA CWU </h3>
+					<h3 id="Resources for making portfolios">Resources for Making Portfolios </h3>
+				<h4> By Rebekah Pusateri, MA CWU</h4>
 					
 				<p>This section provides several tools and resources for making portfolios</p>
 					<h4>Panopto</h4>
