--- a/ENG101 Open Access 2/process.html
+++ b/ENG101 Open Access 2/process.html
@@ -242,18 +242,21 @@
 							coming to us as soon as we start doing something else. Writing process researchers even have a word for this: incubation. Some people like to think they can write well anywhere, anytime. Depending on what you’re writing, this might be true. You can probably send a coherent 
 							text message whether you’re sitting at your desk or on the bus. When you’re writing something that requires sustained focus and a lot of brain power, 
 							however, thinking about when and where you write can make the writing process more productive and less painful.</p>
-						<p>Listen to the following podcast on the writing process:</p>
-						<p> <a href="https://www.buzzsprout.com/1494250"target="_blank">How I Write</a> by Thomas Girshin</p>
-						<p>This is "A podcast from the California State University, San Bernardino Writing Intensive Program" titled 
-							"How I Write" that "features conversations with faculty, staff, students, alumni, and community members about writing and teaching writing."</p>
-						<p> <a href="https://academicguides.waldenu.edu/writingcenter/multimedia/podcast"target="_blank">WriteCast: A Casual Conversation for Serious Writers</a> 
-							Hosted by Claire Helakoski and Kacy Walz. Edited and produced by Claire Helakoskiby</p>
+						<h4>Listen to the following podcasts on the writing process:</h4>
+				<ul>		
+				<li> <a href="https://www.buzzsprout.com/1494250"target="_blank">How I Write</a> by Thomas Girshin</li></ul>
+						<p>"How I Write" is "A podcast from the California State University, San Bernardino Writing Intensive Program" 
+							that "features conversations with faculty, staff, students, alumni, and community members about writing and teaching writing."</p>
+			
+						<li> <a href="https://academicguides.waldenu.edu/writingcenter/multimedia/podcast"target="_blank">WriteCast: A Casual Conversation for Serious Writers</a> 
+							Hosted by Claire Helakoski and Kacy Walz. Edited and produced by Claire Helakoskiby</li>
 						
 						<h3>Works Cited on This Page</h3>
-						<p>Edwards, Dustin, and Enrique Paz. “Only Geniuses can be Writers.” <i>Bad Ideas About Writing</i>, edited by Cheryl E. Ball and Drew M. Loewe, West Virginia University Libraries, 2017, pp. 64-70.</p>
-						<p>Graham, Steve, and Gert Rijlaarsdam. “Writing Education Around the Globe: Introduction and Call for a New Global Analysis.” <i>Reading and Writing</i>, vol. 29, 2016, pp. 781-792.</p>
-						<p>Murray, Donald M. “Teach the Motivating Force of Revision.” <i>The English Journal</i>, vol. 67, no. 7, 1978, pp. 56-60.</p>
-						
+				<ol>
+						<li>Edwards, Dustin, and Enrique Paz. “Only Geniuses can be Writers.” <i>Bad Ideas About Writing</i>, edited by Cheryl E. Ball and Drew M. Loewe, West Virginia University Libraries, 2017, pp. 64-70.</li>
+						<li>Graham, Steve, and Gert Rijlaarsdam. “Writing Education Around the Globe: Introduction and Call for a New Global Analysis.” <i>Reading and Writing</i>, vol. 29, 2016, pp. 781-792.</li>
+						<li>Murray, Donald M. “Teach the Motivating Force of Revision.” <i>The English Journal</i>, vol. 67, no. 7, 1978, pp. 56-60.</li>
+				</ol>
 				<h3 id="Sample Assignments and Activities">Sample Assignments and Activities</h3>
 						<ul>
 							<li><a href="samples/writingprocessanalysis.pdf" target="_blank">Example of a Writing Process Analysis Paper</a></li>
