--- a/ENG101 Open Access 2/stretch.html
+++ b/ENG101 Open Access 2/stretch.html
@@ -56,8 +56,8 @@
       
       </ol>
 							<h3 id="what is stretch?">What Is Stretch</h3>	
-<p> Stretch courses take an ENG 101 course and stretch it out across two quarters so that students have more time to practice writing and get feedback on their
-	writing in low-risk spaces. Stretch courses cover the same learning outcomes and course material as a one quarter ENG 101. Stretching the 
+<p> Stretch courses take an Academic Writing I course and stretch it out across two quarters so that students have more time to practice writing and get feedback on their
+	writing in low-risk spaces. Stretch courses cover the same learning outcomes and course material as a one quarter AWI course. Stretching the 
 	learning objectives of a one-quarter writing course across two quarters gives students extended and intensive practice in the types of 
 	critical reading and writing they need to be successful students across the university. The philosophy behind this model is grounded 
 	in the assumption that all students coming into the university are capable learners in possession of effective literacy skills; however, 
@@ -124,17 +124,17 @@
 <li>Students will engage with multiple perspectives. </li>
 </ul>
 
-<p>Please make sure you understand your obligation to complete both ENG 101A and 101B to complete the requirements for general education and AWI.
+<p>Please make sure you understand the obligation to complete both ENG 101A and 101B to complete the requirements for general education and AWI.
   Students must earn a D- or better in ENG 101A in order to enroll in 101B. ENG 101A counts as 5 elective credits. 
-	Students need to earn a C- to pass ENG 101B and earn 5 credits for AWI.
+	Students need to earn a C- to pass ENG 101B and earn 5 credits for AWI. 
   101A and 101B are designed to be an introduction to college reading and writing. Students
   in the stretch program will have numerous opportunities for writing practice,
   feedback, and revision. Please remember that the completion of ENG 101B with a C- or better
   satisfies the general education AWI requirement for graduation.</p>
 
-<h3>Possible High-Stakes Assignments </h3>
+<h3>Possible Major Assignments </h3>
 
-<p><b>Sample High-Stakes Assignments for ENG 101A-B might include:</b></p>
+<p><b>Types of Writing Assignments for ENG 101A-B:</b></p>
 <ul>
 <li>Rhetorical Analysis of a Text (image, article, chapter, song, play, art, story) 3-4 pages</li>
 <li>Literacy Narratives: 3-4 pages</li>
