--- a/ENG101 Open Access 2/index.html
+++ b/ENG101 Open Access 2/index.html
@@ -46,7 +46,7 @@
 							<li><a href="discoursecommunities.html">Discourse Communities</a></li>
 							<li><a href="multimodal.html">Multimodality</a></li>
 								<li><a href="reading.html">Critical Reading</a></li>
-							<li><a href="cwuhistory.html">CWU Writing Program History</a></li>
+							<li><a href="feedbacking.html">Feedbacking</a></li>
 								<li><a href="portfolios.html">Portfolios</a></li>
 							<li><a href=".html"></a></li>
 							<li><a href=".html"></a></li>
@@ -176,8 +176,8 @@
 									<span class="image">
 										<img src="images/CWU1919.png" style="width:500px;height:300px;" alt="" />
 									</span>
-									<a href="cwuhistory.html">
-										<h2>CWU Writing Program History</h2>
+									<a href="feedbacking.html">
+										<h2>Feedbacking</h2>
 										<div class="content">
 											<p></p>
 										</div>
