--- a/ENG101 Open Access 2/discoursecommunities.html
+++ b/ENG101 Open Access 2/discoursecommunities.html
@@ -60,7 +60,7 @@
                   </ol>
 
                   <h3 id="What are discourse communities?">What Are Discourse Communities? by Kimberly Smith</h3>
-
+							
               <p> Discourse communities are everywhere. They are all around you. You belong to several discourse communities right now. David Russell (1992) contends that 
 		      “writing is a complex and continuously developing response to a specialized, text-based, discourse community, highly embedded in the 
 		      differentiated practices of that community” (p. 153). Discourse communities have specific conventions for writing, speaking, and behaving that members are expected to learn. 
@@ -114,7 +114,37 @@
 	share information and feedback, utilize genres, and interact using a specialized lexis, and they also have members with varying levels of 
 	knowledge and expertise.</p>
 
+<p>Discourse communities also rely on other conventions that move beyond writing. James Gee calls these conventions an identity kit. Every discourse community has a specific identity kit.
+	Shakespeare wrote that “all the world is a stage and we are merely players, performers and 
+								portrayers.” We play a variety of roles for different 
+								communities. You may be a son, daughter, 
+								cousin, student, employee, church member, and teammate at the same time. All these different roles require you to talk, write, do, be, 
+	value, and believe in very specific ways. If I walk down to the North Shore in Hawaii with an 
+								over-sized surfboard, wearing a pair of jean shorts, and I start yelling as loud as I can across the beach, “Hang ten, my dudes! 
+								Hang Ten!” I would be using a jargon and lexis that represents the characteristics of the surfing community in
+								a grammatically suffice manner, but my ways of being, saying, and doing as a surfer are all wrong. I am using words and props
+								associated with the surfing community, but I’m not a surfer—as my outfit, body language, surfboard, and forced speech clearly 
+								indicate. I have no idea how to surf, or to sincerely and genuinely communicate about surfing with a surfing community, despite 
+								my attempt at mimicking Discourse practices common to that community. Being a surfer and part of a community of surfers is much 
+								more than memorizing a few linguistic markers, wearing a bathing suit, knowing some jargon, owning a piece of cultural paraphernalia, 
+								and being able to adequately apply Mr. Zog’s wax to a surfboard. </p>
 
+<p>Think about all of the different discourse communities you belong to, or have belonged, and consider how those communities talk, write, do, be, value, and 
+	believe; that's an identity kit. 
+	When you go to work, you use a 
+	different identity kit than the one you use at soccer or baseball practice. Your fraternity or sorority has a very specific identity that is enforced 
+	with a code of ethics that regulates the ways members behave, talk, and dress. You may have to wear a uniform to work or play in a game. You may or 
+	may not be allowed to speak in the locker room before a game because you’re not the captain of the team. All these different roles require you to 
+	learn and know each community’s wears its identity kit. Each restaurant I worked at had a specific kit we had to wear. Servers were required to wear 
+	uniforms, memorize all the ingredients and descriptions for the food, and be able to articulate those ingredients to the customers without hesitation. 
+	We were forbidden from writing down food orders. Memorizing an order was a way of being more professional and turned every server into a human menu. 
+	The manager of the restaurant would administer tests on menu items and ingredients that servers had to pass to be eligible to work. There were 
+	uniform inspections before work and servers with problematic uniforms, uniforms with wrinkles or stains, were asked to go home and lost a work shift. 
+	These conventions were specific ways of being and doing that the owner of the restaurant valued and required the staff to embody. Servers had to 
+	become the menu, to perform the menu, and be able to communicate the menu too many different types of people. As a server, I always had to smile and exude 
+	excitement. I had to be able to read each customer’s mood, body language, and tone of voice to manage our interactions successfully. 
+
+</p>
 <h3 id="What does writing and communication look like inside different communities?">What does writing and communication look like inside different communities? by Kimberly Smith</h3>
 
 <p>All discourse communities have different goals, values, and participating members, so how they communicate naturally differs. Different discourse 
